--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "libs/fast_float"]
+[submodule "ext/fast_float"]
 	path = ext/fast_float
-	url = https://github.com/fastfloat/fast_float.git
+	url = https://github.com/mayawarrier/fast_float
